--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Ejemplo1</title>
 	</head>
-	<body bgcolor="lightblue">
+	<body bgcolor="magenta">
 		<h1>archivo de prueba GIT</h1>
 		<table border="1">
 			<tr>
